Replace Pojokan.io to Pojokan.dev

--- a/view/advanced-technology-en.html
+++ b/view/advanced-technology-en.html
@@ -2,58 +2,62 @@
   <div class="col-md-12 wow fadeInUp">
     <h3>Advanced Technology</h3>
     <p>
-      The rapid development of technology produce many services that can be used by the community to make life easier.
-      Many various companies that run in the field of technology has always been competing to provide the best service
-      and
-      the latest features of their products for customer satisfaction. As one of leading company in this field
-      Pojokan.Io committed to always provide the best service and the best products to the customers.
+      The rapid development of technology produce many services that can be used
+      by the community to make life easier. Many various companies that run in
+      the field of technology has always been competing to provide the best
+      service and the latest features of their products for customer
+      satisfaction. As one of leading company in this field Pojokan.dev
+      committed to always provide the best service and the best products to the
+      customers.
     </p>
     <p>
-      In the term of development, advanced technology is the nature of our development mechanism, which reflected in the
-      way of our consumers choosing our various services that provides the best performance at their convenience.
+      In the term of development, advanced technology is the nature of our
+      development mechanism, which reflected in the way of our consumers
+      choosing our various services that provides the best performance at their
+      convenience.
     </p>
   </div>
 </div>
 <div class="row">
   <div class="col-md mt-md-3 wow fadeInUp">
-    <h5>
-      Our goals for using advanced technology are:
-    </h5>
+    <h5>Our goals for using advanced technology are:</h5>
     <hr />
     <ol>
       <li>
         <b>Products Excellent Performance</b>
         <p>
-          Advanced technology automatically provides more convenience for the users. In the world of technology,
-          not all the implementation can meet the customer satisfaction, however, there will always be rooms for
-          improvement.
-          With the development of technology, sometime we didn't realise enough the breakthrough from what we previously
-          think
-          was limited in the technology matter. Therefore, the use of advanced
-          technology can provide good performance improvement from all of the products that we offer.
+          Advanced technology automatically provides more convenience for the
+          users. In the world of technology, not all the implementation can meet
+          the customer satisfaction, however, there will always be rooms for
+          improvement. With the development of technology, sometime we didn't
+          realise enough the breakthrough from what we previously think was
+          limited in the technology matter. Therefore, the use of advanced
+          technology can provide good performance improvement from all of the
+          products that we offer.
         </p>
       </li>
       <li>
         <b>Easier to be Maintenanced</b>
         <p>
-          On one hand, legacy and monolith technology tends to be difficult to maintain, there are various factors that
-          cause it
-          convoluted to update, such as components that are no longer available, the process that takes longer, and so
-          on.
-          On the other hand Pojokan.io approach to use the advanced technology, will break the limitation barrer and
-          open the board potential for development since the required components are still available, and the
-          processes needed both in terms of use and maintenance can run more efficiently.
+          On one hand, legacy and monolith technology tends to be difficult to
+          maintain, there are various factors that cause it convoluted to
+          update, such as components that are no longer available, the process
+          that takes longer, and so on. On the other hand Pojokan.dev approach
+          to use the advanced technology, will break the limitation barrer and
+          open the board potential for development since the required components
+          are still available, and the processes needed both in terms of use and
+          maintenance can run more efficiently.
         </p>
       </li>
       <li>
         <b>Cheap Operational Costs and Low Time Consuming</b>
         <p>
-          Older technology also tends to cost more and take longer time to develop. This is because it is difficult
-          to get the proper skillset and libraries that required during maintenance process. It will usually ends up
-          with more costs to operate, in addition with the time needed to carry
-          out longer maintenance. This obviously contradict with what we can offer with the implementation of the
-          advanced
-          technology.
+          Older technology also tends to cost more and take longer time to
+          develop. This is because it is difficult to get the proper skillset
+          and libraries that required during maintenance process. It will
+          usually ends up with more costs to operate, in addition with the time
+          needed to carry out longer maintenance. This obviously contradict with
+          what we can offer with the implementation of the advanced technology.
         </p>
       </li>
     </ol>
