--- a/view/advanced-technology-id.html
+++ b/view/advanced-technology-id.html
@@ -7,11 +7,11 @@
       membuat berbagai perusahaan yang berjalan dibidang teknologi
       berlomba-lomba untuk senantiasa memberikan layanan terbaik dan fitur
       terbaru dari produknya demi kepuasan kustomer. Hal ini pun tak luput dari
-      Pojokan.Io sendiri, kami senantiasa memberikan layanan terbaik serta
+      Pojokan.dev sendiri, kami senantiasa memberikan layanan terbaik serta
       produk terbaik kami kepada kustomer.
     </p>
     <p>
-      Pojokan.Io sendiri dalam pengembangan produknya senantiasa menggunakan
+      Pojokan.dev sendiri dalam pengembangan produknya senantiasa menggunakan
       teknologi yang maju, hal ini dapat memperluas pilihan konsumen dalam
       memilih layanan kami serta kami pun juga dapat memberikan performa terbaik
       untuk melayani kustomer.
@@ -20,9 +20,7 @@
 </div>
 <div class="row">
   <div class="col-md mt-md-3 wow fadeInUp">
-    <h5>
-      Adapun tujuan kami dari menggunakan teknologi yang maju adalah:
-    </h5>
+    <h5>Adapun tujuan kami dari menggunakan teknologi yang maju adalah:</h5>
     <hr />
     <ol>
       <li>
