--- a/view/business-oriented-content-id.html
+++ b/view/business-oriented-content-id.html
@@ -1,71 +1,106 @@
 <div class="row">
   <div class="col-md-12 wow fadeInUp">
-    <p><b>Business oriented</b> adalah sebuah metode yang dipakai oleh beberapa perusahaan
-      untuk menentukan alur bisnis dari suatu perusahaan, dan oleh karena itu maka Pojokan.io
-      sebagai sebuah perusahaan teknologi yang didirikan oleh para kawula muda dan member yang bertalenta di seluruh
-      negeri Indonesia,
-      adapun business oriented yang ada di dalam Pojokan.io ini menggunakan 2 jenis model
-      business,
-      yaitu business model yang berorientasi kepada business (B2B) dan juga business model yang berorientasi kepada
-      customer (B2C)
-      berdasarkan hal tersebut, maka Pojokan.io ini juga didirikan berdasarkan kedua business
-      model tersebut
-      hal ini juga digunakan oleh Pojokan.io untuk lebih mengarahkan alur business dari Pojokan.io
-      itu sendiri yang sekaligus membedakan Pojokan.io dengan perusahaan lainnya.</p>
+    <p>
+      <b>Business oriented</b> adalah sebuah metode yang dipakai oleh beberapa
+      perusahaan untuk menentukan alur bisnis dari suatu perusahaan, dan oleh
+      karena itu maka Pojokan.dev sebagai sebuah perusahaan teknologi yang
+      didirikan oleh para kawula muda dan member yang bertalenta di seluruh
+      negeri Indonesia, adapun business oriented yang ada di dalam Pojokan.dev
+      ini menggunakan 2 jenis model business, yaitu business model yang
+      berorientasi kepada business (B2B) dan juga business model yang
+      berorientasi kepada customer (B2C) berdasarkan hal tersebut, maka
+      Pojokan.dev ini juga didirikan berdasarkan kedua business model tersebut
+      hal ini juga digunakan oleh Pojokan.dev untuk lebih mengarahkan alur
+      business dari Pojokan.dev itu sendiri yang sekaligus membedakan
+      Pojokan.dev dengan perusahaan lainnya.
+    </p>
 
-    <p>Adapun beberapa kategori yang ada di dalam Bussiness Oriented ini adalah sebagai berikut</p>
+    <p>
+      Adapun beberapa kategori yang ada di dalam Bussiness Oriented ini adalah
+      sebagai berikut
+    </p>
     <ol>
       <li>Business Model</li>
       <picture>
-        <source srcset="img/business-model-canvas.webp" type="image/webp">
-        <source srcset="img/business-model-canvas.jpg" type="image/jpeg">
-        <img loading="lazy" title="Business Model Canvas" class="responsive-image">
+        <source srcset="img/business-model-canvas.webp" type="image/webp" />
+        <source srcset="img/business-model-canvas.jpg" type="image/jpeg" />
+        <img
+          loading="lazy"
+          title="Business Model Canvas"
+          class="responsive-image"
+        />
       </picture>
       <p>
-        Pojokan.io memiliki sebuah business model yang bisa disesuaikan dengan permintaan customer yaitu melalui
-        business model yang ada diatas, jika melihat gambar di atas, maka semua yang dibutuhkan oleh customer itu akan
-        dicatat dan dianalisis terlebih dahulu lewat business model tersebut sebelum dilakukannya process development,
-        hal ini agar mempermudah pihak developer untuk memulai proses development sistem sesuai business model yang
-        telah dibutuhkan oleh customer baik dari segi B2B maupun B2C.</p>
+        Pojokan.dev memiliki sebuah business model yang bisa disesuaikan dengan
+        permintaan customer yaitu melalui business model yang ada diatas, jika
+        melihat gambar di atas, maka semua yang dibutuhkan oleh customer itu
+        akan dicatat dan dianalisis terlebih dahulu lewat business model
+        tersebut sebelum dilakukannya process development, hal ini agar
+        mempermudah pihak developer untuk memulai proses development sistem
+        sesuai business model yang telah dibutuhkan oleh customer baik dari segi
+        B2B maupun B2C.
+      </p>
       <li>Business Process</li>
       <center>
         <picture>
-          <source srcset="img/Pojokan-Project-Tutorial-System.webp" type="image/webp">
-          <source srcset="img/Pojokan-Project-Tutorial-System.png" type="image/png">
-          <img loading="lazy" title="Pojokan Project Tutorial System" class="responsive-image">
+          <source
+            srcset="img/Pojokan-Project-Tutorial-System.webp"
+            type="image/webp"
+          />
+          <source
+            srcset="img/Pojokan-Project-Tutorial-System.png"
+            type="image/png"
+          />
+          <img
+            loading="lazy"
+            title="Pojokan Project Tutorial System"
+            class="responsive-image"
+          />
         </picture>
       </center>
-      <p>Pojokan.io itu sendiri juga memiliki business process sendiri yang lain dari
-        perusahaan teknologi sejenis, maka
-        Pojokan.io membuat sebuah standar tersendiri mengenai sistem yang akan dibangun
-        oleh
-        tim development yang dimikiliki
-        oleh Pojokan.io, hal ini digunakan agar setiap tim yang ada di dalam Pojokan.io itu
-        dapat saling bekerjasama dan tidak
-        ada yang bentrok ketika melakukan proses development, serta kami juga akan selalu membuat business process
-        sebelum melakukan proses development, agar pihak developer bisa mengetahui mengenai teknologi apa yang akan
-        digunakan
-        oleh sistem yang akan kami tawarkan kepada pihak customer.</p>
+      <p>
+        Pojokan.dev itu sendiri juga memiliki business process sendiri yang lain
+        dari perusahaan teknologi sejenis, maka Pojokan.dev membuat sebuah
+        standar tersendiri mengenai sistem yang akan dibangun oleh tim
+        development yang dimikiliki oleh Pojokan.dev, hal ini digunakan agar
+        setiap tim yang ada di dalam Pojokan.dev itu dapat saling bekerjasama
+        dan tidak ada yang bentrok ketika melakukan proses development, serta
+        kami juga akan selalu membuat business process sebelum melakukan proses
+        development, agar pihak developer bisa mengetahui mengenai teknologi apa
+        yang akan digunakan oleh sistem yang akan kami tawarkan kepada pihak
+        customer.
+      </p>
 
       <li>Segmentasi Business</li>
       <center>
         <picture>
-          <source srcset="img/High-Level-Front-End-Diagram.webp" type="image/webp">
-          <source srcset="img/High-Level-Front-End-Diagram.png" type="image/png">
-          <img loading="lazy" title="High Level Front End Diagram" class="responsive-image">
+          <source
+            srcset="img/High-Level-Front-End-Diagram.webp"
+            type="image/webp"
+          />
+          <source
+            srcset="img/High-Level-Front-End-Diagram.png"
+            type="image/png"
+          />
+          <img
+            loading="lazy"
+            title="High Level Front End Diagram"
+            class="responsive-image"
+          />
         </picture>
       </center>
-      <p>Untuk setiap produk yang ditawarkan berbasis B2C, maka Pojokan.io sebagai
-        perusahaan
-        berbasis teknologi akan
-        melakukan analisis segmentasi pasar yang ada di Indonesia terlebih dahulu sebelum perusahaan Pojokan.io ini akan
-        go
-        international. Pojokan.io juga sudah memahami mengenai kondisi pasar yang ada di
-        Indonesia, dan hal inilah yang
-        membuat Pojokan.io sebagai salah satu perusahaan teknologi yang menggunakan model
-        business B2B & B2C dapat
-        dengan mudah mengetahui segmentasi pasar yang ada di Indonesia, hal ini juga akan membantu Pojokan.io didalam
-        memperbaikai sistem B2C yang dimiliki agar tetap sesuai dengan segmentasi pasar yang ada di Indonesia.</p>
+      <p>
+        Untuk setiap produk yang ditawarkan berbasis B2C, maka Pojokan.dev
+        sebagai perusahaan berbasis teknologi akan melakukan analisis segmentasi
+        pasar yang ada di Indonesia terlebih dahulu sebelum perusahaan
+        Pojokan.dev ini akan go international. Pojokan.dev juga sudah memahami
+        mengenai kondisi pasar yang ada di Indonesia, dan hal inilah yang
+        membuat Pojokan.dev sebagai salah satu perusahaan teknologi yang
+        menggunakan model business B2B & B2C dapat dengan mudah mengetahui
+        segmentasi pasar yang ada di Indonesia, hal ini juga akan membantu
+        Pojokan.dev didalam memperbaikai sistem B2C yang dimiliki agar tetap
+        sesuai dengan segmentasi pasar yang ada di Indonesia.
+      </p>
     </ol>
   </div>
 </div>
