--- a/view/contact-us-id.html
+++ b/view/contact-us-id.html
@@ -1,57 +1,77 @@
 <div class="rgba-black-strong py-5">
-    <div class="container">
-        <div class="wow fadeIn">
-            <h2 class="h1 text-white pt-5 pb-3 text-center">Hubungi kami</h2>
-            <p class="text-white px-5 mb-5 pb-3 lead text-center">
-                Ingin tahu lebih lanjut tentang Pojokan.io? Silahkan kirim pesan kepada kami dengan form dibawah ini
-            </p>
-        </div>
-        <div class="card mb-5 wow fadeInUp" data-wow-delay=".4s">
-            <div class="card-body p-5">
-                <div class="row">
-                    <div class="col-md-12">
-                        <form action="https://formspree.io/f/maygrlvy" method="POST">
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="md-form">
-                                        <input class="form-control" id="name" type="text" name="name"
-                                            required="required" />
-                                        <label for="name">Nama Anda</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="md-form">
-                                        <input class="form-control" id="email" type="text" name="_replyto"
-                                            required="required" />
-                                        <label for="email">Email Anda</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="md-form">
-                                        <input class="form-control" id="subject" type="text" name="subject"
-                                            required="required" />
-                                        <label for="subject">Judul / Topik Pertanyaan</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="md-form">
-                                        <textarea class="md-textarea" id="message" name="message"
-                                            required="required"></textarea>
-                                        <label for="message">Pesan Anda</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="center-on-small-only mb-4">
-                                <button class="btn btn-indigo ml-0" type="submit"><i
-                                        class="fa fa-paper-plane-o mr-2"></i>
-                                    Kirim</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="container">
+    <div class="wow fadeIn">
+      <h2 class="h1 text-white pt-5 pb-3 text-center">Hubungi kami</h2>
+      <p class="text-white px-5 mb-5 pb-3 lead text-center">
+        Ingin tahu lebih lanjut tentang Pojokan.dev? Silahkan kirim pesan kepada
+        kami dengan form dibawah ini
+      </p>
     </div>
+    <div class="card mb-5 wow fadeInUp" data-wow-delay=".4s">
+      <div class="card-body p-5">
+        <div class="row">
+          <div class="col-md-12">
+            <form action="https://formspree.io/f/maygrlvy" method="POST">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="md-form">
+                    <input
+                      class="form-control"
+                      id="name"
+                      type="text"
+                      name="name"
+                      required="required"
+                    />
+                    <label for="name">Nama Anda</label>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="md-form">
+                    <input
+                      class="form-control"
+                      id="email"
+                      type="text"
+                      name="_replyto"
+                      required="required"
+                    />
+                    <label for="email">Email Anda</label>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="md-form">
+                    <input
+                      class="form-control"
+                      id="subject"
+                      type="text"
+                      name="subject"
+                      required="required"
+                    />
+                    <label for="subject">Judul / Topik Pertanyaan</label>
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="md-form">
+                    <textarea
+                      class="md-textarea"
+                      id="message"
+                      name="message"
+                      required="required"
+                    ></textarea>
+                    <label for="message">Pesan Anda</label>
+                  </div>
+                </div>
+              </div>
+              <div class="center-on-small-only mb-4">
+                <button class="btn btn-indigo ml-0" type="submit">
+                  <i class="fa fa-paper-plane-o mr-2"></i> Kirim
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
