--- a/view/continuously-integration-content-en.html
+++ b/view/continuously-integration-content-en.html
@@ -5,7 +5,7 @@
             Mistakes in work processes are something that cannot be denied at any company, eventhough in a stable
             company unmindful of potential mistakes might also be happened. This includes the small
             things that are ignored by employees that can be a problem during the work processes of the
-            company. This makes Pojokan.Io reflect and learn for these things, in this
+            company. This makes Pojokan.dev reflect and learn for these things, in this
             company we implement a work system called Continuously Integration.</p>
         <p>
             <b>Continuously Integration</b> is a work system that requires all parts of the company to always integrate
