--- a/view/continuously-integration-content-id.html
+++ b/view/continuously-integration-content-id.html
@@ -7,7 +7,7 @@
             sudah berjalan dengan stabil hal tersebut dapat membuat kita lengah akan potensi kesalahan yang mungkin saja
             terjadi. Belum lagi hal-hal kecil yang diabaikan pegawai sehingga dapat menjadi sebuah masalah yang dapat
             menghambat
-            proses kerja perusahaan pun turut serta berpotensi untuk muncul. Hal ini membuat Pojokan.Io bercermin dan
+            proses kerja perusahaan pun turut serta berpotensi untuk muncul. Hal ini membuat Pojokan.dev bercermin dan
             belajar
             akan hal-hal tersebut, di dalam perusahaan ini kami menerapkan sebuah sistem kerja yang bernama Continuously
             Integration.</p>
