--- a/view/pure-indonesian-content-id.html
+++ b/view/pure-indonesian-content-id.html
@@ -2,8 +2,8 @@
   <div class="col-md-12 wow fadeInUp">
     <h3>Pure Indonesian</h3>
     <p>
-      Pojokan.io merupakan sebuah perusahaan yang berbasis di Indonesia dan
-      didirikan sendiri oleh kawula muda Indonesia. Pojokan.io memiliki target
+      Pojokan.dev merupakan sebuah perusahaan yang berbasis di Indonesia dan
+      didirikan sendiri oleh kawula muda Indonesia. Pojokan.dev memiliki target
       untuk menjadi perusahaan yang Go International, kendati demikian
       perusahaan ini tidak akan melepaskan esensinya sebagai putra/putri
       Indonesia dan senantiasa menanamkan semangat Indonesia di dada. Selain itu
@@ -13,10 +13,10 @@
       tinggi.
     </p>
     <p>
-      Pojokan.io sendiri dalam penggunaan sumber daya manusianya akan jauh lebih
-      mengutamakan sumber daya manusia yang berasal dari Indonesia, hal ini guna
-      mendukung pembangunan dan pengembangan sumber daya manusia yang ahli dalam
-      bidangnya di negeri ini.
+      Pojokan.dev sendiri dalam penggunaan sumber daya manusianya akan jauh
+      lebih mengutamakan sumber daya manusia yang berasal dari Indonesia, hal
+      ini guna mendukung pembangunan dan pengembangan sumber daya manusia yang
+      ahli dalam bidangnya di negeri ini.
     </p>
   </div>
 </div>
