--- a/view/business-oriented-content-en.html
+++ b/view/business-oriented-content-en.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-md-12 wow fadeInUp">
-    <p><b>Business oriented</b> is our main business flow determination in Pojokan.io to distinguishes us a technology
+    <p><b>Business oriented</b> is our main business flow determination in Pojokan.dev to distinguishes us a technology
       company which established by young people and talented members throughout the
-      country of Indonesia. As for the existing business oriented in this Pojokan.io we uses 2 types of business models,
+      country of Indonesia. As for the existing business oriented in this Pojokan.dev we uses 2 types of business models,
       which business-oriented business models (B2B) and also customer-oriented business models (B2C). Based on these
       appoaches the
-      Pojokan.io use them to further direct the business flow of Pojokan.io itself which also make us stand up from the
+      Pojokan.dev use them to further direct the business flow of Pojokan.dev itself which also make us stand up from the
       other companies.
     </p>
 
@@ -20,7 +20,7 @@
         </picture>
       </center>
       <p>
-        Pojokan.io has a business model that can be adapted to the customer demand, observing through the business model
+        Pojokan.dev has a business model that can be adapted to the customer demand, observing through the business model
         above, then everything that is needed by the customer will be recorded and analyzed in
         advance through the business model before doing the development process. This approach makes it easier for the
         developer
@@ -33,9 +33,9 @@
         <img loading="lazy" title="Pojokan Project Tutorial System" class="responsive-image">
       </picture>
       </center>
-      <p>Pojokan.io itself also has its own other business processes adopted from top technology companies. Pojokan.io
-        sets its own standards regarding the system that will be built by the development team owned by Pojokan.io. This
-        mechanism to ensure that each team within The Pojokan.io can cooperate with each other and to minimise conflict
+      <p>Pojokan.dev itself also has its own other business processes adopted from top technology companies. Pojokan.dev
+        sets its own standards regarding the system that will be built by the development team owned by Pojokan.dev. This
+        mechanism to ensure that each team within The Pojokan.dev can cooperate with each other and to minimise conflict
         when
         doing the development process. We start our development with a business process beforehand,
         so that developers can figure out about what technology will be used by the system that we will offer to the
@@ -49,9 +49,9 @@
           <img loading="lazy" title="High Level Front End Diagram" class="responsive-image">
         </picture>
       </center>
-      <p>For each product offered on a B2C basis, Pojokan.io as a technology-based company will also conduct an analysis
+      <p>For each product offered on a B2C basis, Pojokan.dev as a technology-based company will also conduct an analysis
         of
-        market segmentation in Indonesia before the product go international. Pojokan.io also
+        market segmentation in Indonesia before the product go international. Pojokan.dev also
         understands the market conditions in Indonesia, and this is what makes us as one of the technology
         companies that use B2B & B2C business models which easily find out the market segmentation in Indonesia. This
         specialty will
