--- a/view/footer.html
+++ b/view/footer.html
@@ -8,6 +8,6 @@
 </div>
 <div class="footer-copyright">
   <div class="container-fluid">
-    <p>&copy; 2019 <a href="/">Pojokan.io</p>
+    <p>&copy; 2019 - 2023 <a href="/">Pojokan.dev</p>
   </div>
 </div>
